<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.ypbin.admin</groupId>
    <artifactId>ypbin-admin</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>ypbin-common</module>
        <module>ypbin-gateway</module>
        <module>ypbin-auth</module>
        <module>ypbin-service</module>
        <module>ypbin-service-api</module>
    </modules>
    <name>${project.artifactId}</name>
    <description>基于 ypbin-starter 的企业级后台管理系统</description>

    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>4.1.1</spring-boot.version>
        <ypbin-starter.version>3.4.0</ypbin-starter.version>
        <sa-token.version>1.46.0</sa-token.version>
        <sms4j.version>3.3.5</sms4j.version>
        <flatten-maven-plugin.version>1.8.0</flatten-maven-plugin.version>
        <lombok.version>1.18.48</lombok.version>
        <maven-surefire-plugin.version>3.6.0</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot 依赖管理（提供 flyway/mysql 等版本） -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- ypbin-starter 统一 BOM（正式版 groupId 为 cn.ypbin） -->
            <dependency>
                <groupId>cn.ypbin</groupId>
                <artifactId>ypbin-starter-bom</artifactId>
                <version>${ypbin-starter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI BOM（版本由 ypbin-starter 对齐，直接引可选模型依赖用）-->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>2.0.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- sms4j 短信框架（不在 spring-boot-dependencies 中） -->
            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-spring-boot-starter</artifactId>
                <version>${sms4j.version}</version>
            </dependency>
            <!-- 微服务内部模块 -->
            <dependency>
                <groupId>cn.ypbin.admin</groupId>
                <artifactId>ypbin-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.ypbin.admin</groupId>
                <artifactId>ypbin-system-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.ypbin.admin</groupId>
                <artifactId>ypbin-ai-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.ypbin.admin</groupId>
                <artifactId>ypbin-miniapp</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 所有模块共享：Lombok（编译期生成 getter/setter 等，不进产物） -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- 统一 ${revision} 版本号，install/deploy 时展开为真实版本 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.16.0</version>
                <configuration>
                    <!-- 保留方法参数名：Spring MVC @PathVariable/@RequestParam 依赖参数名解析 -->
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <!-- 测试执行器：显式锁定现代版本（JUnit 5 支持），
                 避免依赖 Maven 隐式默认（旧 Maven 回退 2.12.4 不识别 JUnit 5 导致测试静默不执行） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!--
          非发布的开发/度量模块：由 activeByDefault 提供，使默认构建（CI 的 `mvn -B clean verify`）与本地
          `mvn test` 都包含架构约束门禁；而激活任一显式 profile（如 `-Pxxx`）后本 profile 失效 →
          门禁模块不进入该次反应堆。这样它的空 jar（无 sources/javadoc）不会混进任何发布/部署产物。

          ⚠️ 与 starter 侧同源的副作用（见 ypbin-starter/pom.xml 的 dev-only profile 注释）：
          只要显式激活了别的 profile，架构门禁就**不会**执行——所以「没报错」不等于「检查过」，
          单独跑门禁请用 `mvn -pl ypbin-architecture-tests -am test`（不加 `-P`）。
          非发布模块必须写在本 profile 里、不得写进顶层 <modules>，由 ModulePublishingTest 校验。
        -->
        <profile>
            <id>dev-only</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>ypbin-architecture-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
